Implemented normalized fusion method and added results to doc