@@ -7,6 +7,7 @@ Currently, Anserini provides support for the following fusion methods:
 + RRF = Reciprocal Rank Fusion
 + Average = averaging scores on a list of runs, CombSUM
 + Interpolation = Weighted sum of two runs
++ Normalize = average of scores normalized between [0, 1]
 
 
 ## Results 
@@ -19,109 +20,109 @@ Since there were only two runs fused, the average and interpolation methods prod
 
 Three metrics were used for evaluation: nDCG@10, R@100, and R@1000.
 
-The table below reports the effectiveness of the methods with the nDCG@10 metric:
+The table below reports the effectiveness of the methods with the nDCG@10 metric and the base runs fused for reference:
 
-| Corpus                    |    RRF | Average | Interpolation |
-|---------------------------|-------:|--------:|--------------:|
-| `trec-covid`              | 0.8041 |  0.6567 |     0.6567    |
-| `bioasq`                  | 0.5278 |  0.5308 |     0.5308    |
-| `nfcorpus`                | 0.3725 |  0.3416 |     0.3416    |
-| `nq`                      | 0.4831 |  0.3241 |     0.3241    |
-| `hotpotqa`                | 0.7389 |  0.6497 |     0.6497    |
-| `fiqa`                    | 0.3671 |  0.2470 |     0.2470    |
-| `signal1m`                | 0.3533 |  0.3463 |     0.3463    |
-| `trec-news`               | 0.4855 |  0.4162 |     0.4162    |
-| `robust04`                | 0.5087 |  0.4327 |     0.4327    |
-| `arguana`                 | 0.5586 |  0.3986 |     0.3986    |
-| `webis-touche2020`        | 0.3771 |  0.4510 |     0.4510    |
-| `cqadupstack-android`     | 0.4652 |  0.3872 |     0.3872    |
-| `cqadupstack-english`     | 0.4461 |  0.3601 |     0.3601    |
-| `cqadupstack-gaming`      | 0.5615 |  0.4886 |     0.4886    |
-| `cqadupstack-gis`         | 0.3679 |  0.2948 |     0.2948    |
-| `cqadupstack-mathematica` | 0.2751 |  0.2084 |     0.2084    |
-| `cqadupstack-physics`     | 0.4143 |  0.3283 |     0.3283    |
-| `cqadupstack-programmers` | 0.3715 |  0.2891 |     0.2891    |
-| `cqadupstack-stats`       | 0.3414 |  0.2796 |     0.2796    |
-| `cqadupstack-tex`         | 0.2931 |  0.2332 |     0.2332    |
-| `cqadupstack-unix`        | 0.3597 |  0.2829 |     0.2829    |
-| `cqadupstack-webmasters`  | 0.3711 |  0.3130 |     0.3130    |
-| `cqadupstack-wordpress`   | 0.3353 |  0.2625 |     0.2625    |
-| `quora`                   | 0.8682 |  0.8009 |     0.8009    |
-| `dbpedia-entity`          | 0.4190 |  0.3365 |     0.3365    |
-| `scidocs`                 | 0.1948 |  0.1527 |     0.1527    |
-| `fever`                   | 0.8108 |  0.6688 |     0.6688    |
-| `climate-fever`           | 0.2812 |  0.1742 |     0.1742    |
-| `scifact`                 | 0.7420 |  0.6806 |     0.6806    |
+| Corpus                    |    RRF | Average | Interpolation | Normalize |   BM25 |    BGE |
+|---------------------------|-------:|--------:|--------------:|----------:|-------:|-------:|
+| `trec-covid`              | 0.8041 |  0.6567 |     0.6567    |   0.7956  | 0.5947 | 0.7815 |
+| `bioasq`                  | 0.5278 |  0.5308 |     0.5308    |   0.5428  | 0.5225 | 0.4148 |
+| `nfcorpus`                | 0.3725 |  0.3416 |     0.3416    |   0.3657  | 0.3218 | 0.3735 |
+| `nq`                      | 0.4831 |  0.3241 |     0.3241    |   0.5183  | 0.3055 | 0.5415 |
+| `hotpotqa`                | 0.7389 |  0.6497 |     0.6497    |   0.7658  | 0.6330 | 0.7259 |
+| `fiqa`                    | 0.3671 |  0.2470 |     0.2470    |   0.3942  | 0.2361 | 0.4065 |
+| `signal1m`                | 0.3533 |  0.3463 |     0.3463    |   0.3629  | 0.3304 | 0.2886 |
+| `trec-news`               | 0.4855 |  0.4162 |     0.4162    |   0.5008  | 0.3952 | 0.4424 |
+| `robust04`                | 0.5087 |  0.4327 |     0.4327    |   0.5127  | 0.4070 | 0.4435 |
+| `arguana`                 | 0.5586 |  0.3986 |     0.3986    |   0.5694  | 0.3970 | 0.6228 |
+| `webis-touche2020`        | 0.3771 |  0.4510 |     0.4510    |   0.3753  | 0.4422 | 0.2571 |
+| `cqadupstack-android`     | 0.4652 |  0.3872 |     0.3872    |   0.4868  | 0.3801 | 0.5076 |
+| `cqadupstack-english`     | 0.4461 |  0.3601 |     0.3601    |   0.4671  | 0.3453 | 0.4857 |
+| `cqadupstack-gaming`      | 0.5615 |  0.4886 |     0.4886    |   0.5818  | 0.4822 | 0.5967 |
+| `cqadupstack-gis `        | 0.3679 |  0.2948 |     0.2948    |   0.3937  | 0.2901 | 0.4131 |
+| `cqadupstack-mathematica` | 0.2751 |  0.2084 |     0.2084    |   0.2951  | 0.2015 | 0.3163 |
+| `cqadupstack-physics`     | 0.4143 |  0.3283 |     0.3283    |   0.4375  | 0.3214 | 0.4724 |
+| `cqadupstack-programmers` | 0.3715 |  0.2891 |     0.2891    |   0.4005  | 0.2802 | 0.4238 |
+| `cqadupstack-stats`       | 0.3414 |  0.2796 |     0.2796    |   0.3534  | 0.2711 | 0.3728 |
+| `cqadupstack-tex`         | 0.2931 |  0.2332 |     0.2332    |   0.3090  | 0.2244 | 0.3115 |
+| `cqadupstack-unix`        | 0.3597 |  0.2829 |     0.2829    |   0.3853  | 0.2749 | 0.4220 |
+| `cqadupstack-webmasters`  | 0.3711 |  0.3130 |     0.3130    |   0.3857  | 0.3059 | 0.4072 |
+| `cqadupstack-wordpress`   | 0.3353 |  0.2625 |     0.2625    |   0.3546  | 0.2483 | 0.3547 |
+| `quora`                   | 0.8682 |  0.8009 |     0.8009    |   0.8859  | 0.7886 | 0.8876 |
+| `dbpedia-entity`          | 0.4190 |  0.3365 |     0.3365    |   0.4374  | 0.3180 | 0.4073 |
+| `scidocs`                 | 0.1948 |  0.1527 |     0.1527    |   0.2019  | 0.1490 | 0.2172 |
+| `fever`                   | 0.8108 |  0.6688 |     0.6688    |   0.8584  | 0.6513 | 0.8629 |
+| `climate-fever`           | 0.2812 |  0.1742 |     0.1742    |   0.2946  | 0.1651 | 0.3117 |
+| `scifact`                 | 0.7420 |  0.6806 |     0.6806    |   0.7472  | 0.6789 | 0.7408 |
 
 
 The table below reports the effectiveness of the methods with the R@100 metric:
 
-| Corpus                    |    RRF | Average | Interpolation |
-|---------------------------|-------:|--------:|--------------:|
-| `trec-covid`              | 0.1467 |  0.1255 |     0.1255    |
-| `bioasq`                  | 0.8128 |  0.7869 |     0.7869    |
-| `nfcorpus`                | 0.3391 |  0.3003 |     0.3003    |
-| `nq`                      | 0.9415 |  0.7922 |     0.7922    |
-| `hotpotqa`                | 0.8917 |  0.8184 |     0.8184    |
-| `fiqa`                    | 0.7160 |  0.5639 |     0.5639    |
-| `signal1m`                | 0.4008 |  0.4077 |     0.4077    |
-| `trec-news`               | 0.5545 |  0.4751 |     0.4751    |
-| `robust04`                | 0.4474 |  0.3963 |     0.3963    |
-| `arguana`                 | 0.9879 |  0.9331 |     0.9331    |
-| `webis-touche2020`        | 0.6169 |  0.5878 |     0.5878    |
-| `cqadupstack-android`     | 0.8203 |  0.7076 |     0.7076    |
-| `cqadupstack-english`     | 0.7520 |  0.6022 |     0.6022    |
-| `cqadupstack-gaming`      | 0.8933 |  0.7956 |     0.7956    |
-| `cqadupstack-gis`         | 0.7621 |  0.6487 |     0.6487    |
-| `cqadupstack-mathematica` | 0.6666 |  0.5173 |     0.5173    |
-| `cqadupstack-physics`     | 0.7921 |  0.6549 |     0.6549    |
-| `cqadupstack-programmers` | 0.7530 |  0.5993 |     0.5993    |
-| `cqadupstack-stats`       | 0.6616 |  0.5650 |     0.5650    |
-| `cqadupstack-tex`         | 0.6331 |  0.5004 |     0.5004    |
-| `cqadupstack-unix`        | 0.7481 |  0.5798 |     0.5798    |
-| `cqadupstack-webmasters`  | 0.7543 |  0.6127 |     0.6127    |
-| `cqadupstack-wordpress`   | 0.6869 |  0.5488 |     0.5488    |
-| `quora`                   | 0.9966 |  0.9793 |     0.9793    |
-| `dbpedia-entity`          | 0.5985 |  0.5019 |     0.5019    |
-| `scidocs`                 | 0.4751 |  0.3735 |     0.3735    |
-| `fever`                   | 0.9731 |  0.9317 |     0.9317    |
-| `climate-fever`           | 0.6288 |  0.4590 |     0.4590    |
-| `scifact`                 | 0.9767 |  0.9327 |     0.9327    |
+| Corpus                    |    RRF | Average | Interpolation | Normalize |   BM25 |    BGE |
+|---------------------------|-------:|--------:|--------------:|----------:|-------:|-------:|
+| `trec-covid`              | 0.1467 |  0.1255 |     0.1255    |   0.1519  | 0.1091 | 0.1406 |
+| `bioasq`                  | 0.8128 |  0.7869 |     0.7869    |   0.8143  | 0.7687 | 0.6316 |
+| `nfcorpus`                | 0.3391 |  0.3003 |     0.3003    |   0.3288  | 0.2457 | 0.3368 |
+| `nq`                      | 0.9415 |  0.7922 |     0.7922    |   0.9372  | 0.7513 | 0.9414 |
+| `hotpotqa`                | 0.8917 |  0.8184 |     0.8184    |   0.8919  | 0.7957 | 0.8726 |
+| `fiqa`                    | 0.7160 |  0.5639 |     0.5639    |   0.7041  | 0.5395 | 0.7415 |
+| `signal1m`                | 0.4008 |  0.4077 |     0.4077    |   0.3947  | 0.3703 | 0.3112 |
+| `trec-news`               | 0.5545 |  0.4751 |     0.4751    |   0.5564  | 0.4469 | 0.4992 |
+| `robust04`                | 0.4474 |  0.3963 |     0.3963    |   0.4434  | 0.3746 | 0.3510 |
+| `arguana`                 | 0.9879 |  0.9331 |     0.9331    |   0.9879  | 0.9324 | 0.9716 |
+| `webis-touche2020`        | 0.6169 |  0.5878 |     0.5878    |   0.6039  | 0.5822 | 0.4867 |
+| `cqadupstack-android`     | 0.8203 |  0.7076 |     0.7076    |   0.8155  | 0.6829 | 0.8454 |
+| `cqadupstack-english`     | 0.7520 |  0.6022 |     0.6022    |   0.7429  | 0.5757 | 0.7586 |
+| `cqadupstack-gaming`      | 0.8933 |  0.7956 |     0.7956    |   0.8906  | 0.7651 | 0.9036 |
+| `cqadupstack-gis`         | 0.7621 |  0.6487 |     0.6487    |   0.7635  | 0.6119 | 0.7682 |
+| `cqadupstack-mathematica` | 0.6666 |  0.5173 |     0.5173    |   0.6725  | 0.4877 | 0.6922 |
+| `cqadupstack-physics`     | 0.7921 |  0.6549 |     0.6549    |   0.7859  | 0.6326 | 0.8078 |
+| `cqadupstack-programmers` | 0.7530 |  0.5993 |     0.5993    |   0.7593  | 0.5588 | 0.7856 |
+| `cqadupstack-stats`       | 0.6616 |  0.5650 |     0.5650    |   0.6644  | 0.5338 | 0.6719 |
+| `cqadupstack-tex`         | 0.6331 |  0.5004 |     0.5004    |   0.6298  | 0.4686 | 0.6489 |
+| `cqadupstack-unix`        | 0.7481 |  0.5798 |     0.5798    |   0.7363  | 0.5417 | 0.7797 |
+| `cqadupstack-webmasters`  | 0.7543 |  0.6127 |     0.6127    |   0.7371  | 0.5820 | 0.7774 |
+| `cqadupstack-wordpress`   | 0.6869 |  0.5488 |     0.5488    |   0.6794  | 0.5152 | 0.7047 |
+| `quora`                   | 0.9966 |  0.9793 |     0.9793    |   0.9958  | 0.9733 | 0.9968 |
+| `dbpedia-entity`          | 0.5985 |  0.5019 |     0.5019    |   0.5951  | 0.4682 | 0.5298 |
+| `scidocs`                 | 0.4751 |  0.3735 |     0.3735    |   0.4830  | 0.3477 | 0.4959 |
+| `fever`                   | 0.9731 |  0.9317 |     0.9317    |   0.9712  | 0.9185 | 0.9719 |
+| `climate-fever`           | 0.6288 |  0.4590 |     0.4590    |   0.6324  | 0.4249 | 0.6354 |
+| `scifact`                 | 0.9767 |  0.9327 |     0.9327    |   0.9700  | 0.9253 | 0.9667 |
 
 
 The table below reports the effectiveness of the methods with the R@1000 metric:
 
-| Corpus                    |    RRF | Average | Interpolation |
-|---------------------------|-------:|--------:|--------------:|
-| `trec-covid`              | 0.5029 |  0.3955 |     0.3955    |
-| `bioasq`                  | 0.9281 |  0.9030 |     0.9030    |
-| `nfcorpus`                | 0.6540 |  0.6422 |     0.6422    |
-| `nq`                      | 0.9874 |  0.8958 |     0.8958    |
-| `hotpotqa`                | 0.9473 |  0.8820 |     0.8820    |
-| `fiqa`                    | 0.8979 |  0.7402 |     0.7402    |
-| `signal1m`                | 0.6139 |  0.5642 |     0.5642    |
-| `trec-news`               | 0.8169 |  0.7051 |     0.7051    |
-| `robust04`                | 0.7237 |  0.6345 |     0.6345    |
-| `arguana`                 | 0.9964 |  0.9893 |     0.9893    |
-| `webis-touche2020`        | 0.8912 |  0.8621 |     0.8621    |
-| `cqadupstack-android`     | 0.9537 |  0.8646 |     0.8646    |
-| `cqadupstack-english`     | 0.8751 |  0.7394 |     0.7394    |
-| `cqadupstack-gaming`      | 0.9661 |  0.8952 |     0.8952    |
-| `cqadupstack-gis`         | 0.9054 |  0.8174 |     0.8174    |
-| `cqadupstack-mathematica` | 0.8781 |  0.7298 |     0.7298    |
-| `cqadupstack-physics`     | 0.9337 |  0.8375 |     0.8375    |
-| `cqadupstack-programmers` | 0.9272 |  0.7745 |     0.7745    |
-| `cqadupstack-stats`       | 0.8363 |  0.7310 |     0.7310    |
-| `cqadupstack-tex`         | 0.8430 |  0.6907 |     0.6907    |
-| `cqadupstack-unix`        | 0.9097 |  0.7626 |     0.7626    |
-| `cqadupstack-webmasters`  | 0.9369 |  0.8088 |     0.8088    |
-| `cqadupstack-wordpress`   | 0.8761 |  0.7571 |     0.7571    |
-| `quora`                   | 0.9999 |  0.9950 |     0.9950    |
-| `dbpedia-entity`          | 0.8096 |  0.6773 |     0.6773    |
-| `scidocs`                 | 0.7477 |  0.5652 |     0.5652    |
-| `fever`                   | 0.9859 |  0.9589 |     0.9589    |
-| `climate-fever`           | 0.8220 |  0.6324 |     0.6324    |
-| `scifact`                 | 0.9967 |  0.9800 |     0.9800    |
+| Corpus                    |    RRF | Average | Interpolation | Normalize |   BM25 |    BGE |
+|---------------------------|-------:|--------:|--------------:|----------:|-------:|-------:|
+| `trec-covid`              | 0.5029 |  0.3955 |     0.3955    |   0.5010  | 0.3955 | 0.4765 |
+| `bioasq`                  | 0.9281 |  0.9030 |     0.9030    |   0.9281  | 0.9030 | 0.8062 |
+| `nfcorpus`                | 0.6540 |  0.6422 |     0.6422    |   0.6563  | 0.3704 | 0.6622 |
+| `nq`                      | 0.9874 |  0.8958 |     0.8958    |   0.9870  | 0.8958 | 0.9859 |
+| `hotpotqa`                | 0.9473 |  0.8820 |     0.8820    |   0.9477  | 0.8820 | 0.9423 |
+| `fiqa`                    | 0.8979 |  0.7402 |     0.7402    |   0.9011  | 0.7393 | 0.9083 |
+| `signal1m`                | 0.6139 |  0.5642 |     0.5642    |   0.6097  | 0.5642 | 0.5331 |
+| `trec-news`               | 0.8169 |  0.7051 |     0.7051    |   0.8158  | 0.7051 | 0.7875 |
+| `robust04`                | 0.7237 |  0.6345 |     0.6345    |   0.7200  | 0.6345 | 0.5961 |
+| `arguana`                 | 0.9964 |  0.9893 |     0.9893    |   0.9964  | 0.9872 | 0.9929 |
+| `webis-touche2020`        | 0.8912 |  0.8621 |     0.8621    |   0.8896  | 0.8621 | 0.8298 |
+| `cqadupstack-android`     | 0.9537 |  0.8646 |     0.8646    |   0.9550  | 0.8632 | 0.9611 |
+| `cqadupstack-english`     | 0.8751 |  0.7394 |     0.7394    |   0.8751  | 0.7323 | 0.8839 |
+| `cqadupstack-gaming`      | 0.9661 |  0.8952 |     0.8952    |   0.9641  | 0.8945 | 0.9719 |
+| `cqadupstack-gis`         | 0.9054 |  0.8174 |     0.8174    |   0.9064  | 0.8174 | 0.9117 |
+| `cqadupstack-mathematica` | 0.8781 |  0.7298 |     0.7298    |   0.8787  | 0.7221 | 0.8810 |
+| `cqadupstack-physics`     | 0.9337 |  0.8375 |     0.8375    |   0.9340  | 0.8340 | 0.9415 |
+| `cqadupstack-programmers` | 0.9272 |  0.7745 |     0.7745    |   0.9275  | 0.7734 | 0.9353 |
+| `cqadupstack-stats`       | 0.8363 |  0.7310 |     0.7310    |   0.8336  | 0.7310 | 0.8445 |
+| `cqadupstack-tex`         | 0.8430 |  0.6907 |     0.6907    |   0.8430  | 0.6907 | 0.8538 |
+| `cqadupstack-unix`        | 0.9097 |  0.7626 |     0.7626    |   0.9132  | 0.7616 | 0.9235 |
+| `cqadupstack-webmasters`  | 0.9369 |  0.8088 |     0.8088    |   0.9334  | 0.8066 | 0.9380 |
+| `cqadupstack-wordpress`   | 0.8761 |  0.7571 |     0.7571    |   0.8782  | 0.7552 | 0.8861 |
+| `quora`                   | 0.9999 |  0.9950 |     0.9950    |   0.9999  | 0.9950 | 0.9999 |
+| `dbpedia-entity `         | 0.8096 |  0.6773 |     0.6773    |   0.8089  | 0.6760 | 0.7833 |
+| `scidocs`                 | 0.7477 |  0.5652 |     0.5652    |   0.7561  | 0.5638 | 0.7824 |
+| `fever`                   | 0.9859 |  0.9589 |     0.9589    |   0.9859  | 0.9589 | 0.9855 |
+| `climate-fever`           | 0.8220 |  0.6324 |     0.6324    |   0.8210  | 0.6324 | 0.8306 |
+| `scifact`                 | 0.9967 |  0.9800 |     0.9800    |   0.9967  | 0.9767 | 0.9967 |
 
 
 ## Run and Evaluate
@@ -131,11 +132,11 @@ The table below reports the effectiveness of the methods with the R@1000 metric:
 Let's start out by setting the `ANSERINI_JAR` and the `OUTPUT_DIR`. Note that the jar must be post v0.39.0. The following is an example from the root directory of Anserini after building.
 
 ```bash
-export ANSERINI_JAR="target/anserini-0.39.1-SNAPSHOT-fatjar.jar"
+export ANSERINI_JAR="./target/anserini-0.39.1-SNAPSHOT-fatjar.jar"
 export OUTPUT_DIR="./runs"
 ```
 
-The following snippet will generate the complete set of results that corresponds to the above table:
+The following snippet will generate the complete set of fusion results that corresponds to the above table:
 
 ```bash
 CORPORA=(trec-covid bioasq nfcorpus nq hotpotqa fiqa signal1m trec-news robust04 arguana webis-touche2020 cqadupstack-android cqadupstack-english cqadupstack-gaming cqadupstack-gis cqadupstack-mathematica cqadupstack-physics cqadupstack-programmers cqadupstack-stats cqadupstack-tex cqadupstack-unix cqadupstack-webmasters cqadupstack-wordpress quora dbpedia-entity scidocs fever climate-fever scifact); for c in "${CORPORA[@]}"
@@ -155,6 +156,9 @@ do
 
     # interp fuse
     java -cp $ANSERINI_JAR --add-modules jdk.incubator.vector io.anserini.fusion.FuseTrecRuns -runs $OUTPUT_DIR/run.inverted.beir-v1.0.0-${c}.flat.test.bm25 $OUTPUT_DIR/run.flat.beir-v1.0.0-${c}.bge-base-en-v1.5.test.bge-flat-onnx -output $OUTPUT_DIR/runs.fuse.interp.beir-v1.0.0-${c}.flat.bm25.bge-base-en-v1.5.bge-flat-onnx.topics.beir-v1.0.0-${c}.test.txt -method interpolation -k 1000 -depth 1000 -rrf_k 60 -alpha 0.5
+
+    # normalize fuse
+    java -cp $ANSERINI_JAR --add-modules jdk.incubator.vector io.anserini.fusion.FuseTrecRuns -runs $OUTPUT_DIR/run.inverted.beir-v1.0.0-${c}.flat.test.bm25 $OUTPUT_DIR/run.flat.beir-v1.0.0-${c}.bge-base-en-v1.5.test.bge-flat-onnx -output $OUTPUT_DIR/runs.fuse.norm.beir-v1.0.0-${c}.flat.bm25.bge-base-en-v1.5.bge-flat-onnx.topics.beir-v1.0.0-${c}.test.txt -method interpolation -k 1000 -depth 1000 -rrf_k 60 -alpha 0.5
 done
 ```
 
@@ -171,18 +175,25 @@ do
 
     java -cp $ANSERINI_JAR trec_eval -c -m recall.1000 qrels.beir-v1.0.0-${c}.test.txt $OUTPUT_DIR/runs.fuse.rrf.beir-v1.0.0-${c}.flat.bm25.bge-base-en-v1.5.bge-flat-onnx.topics.beir-v1.0.0-${c}.test.txt
 
-    echo avg
+    echo average
     java -cp $ANSERINI_JAR trec_eval -c -m ndcg_cut.10 qrels.beir-v1.0.0-${c}.test.txt $OUTPUT_DIR/runs.fuse.avg.beir-v1.0.0-${c}.flat.bm25.bge-base-en-v1.5.bge-flat-onnx.topics.beir-v1.0.0-${c}.test.txt
 
     java -cp $ANSERINI_JAR trec_eval -c -m recall.100 qrels.beir-v1.0.0-${c}.test.txt $OUTPUT_DIR/runs.fuse.avg.beir-v1.0.0-${c}.flat.bm25.bge-base-en-v1.5.bge-flat-onnx.topics.beir-v1.0.0-${c}.test.txt
 
     java -cp $ANSERINI_JAR trec_eval -c -m recall.1000 qrels.beir-v1.0.0-${c}.test.txt $OUTPUT_DIR/runs.fuse.avg.beir-v1.0.0-${c}.flat.bm25.bge-base-en-v1.5.bge-flat-onnx.topics.beir-v1.0.0-${c}.test.txt
     
-    echo interp
+    echo interpolation
     java -cp $ANSERINI_JAR trec_eval -c -m ndcg_cut.10 qrels.beir-v1.0.0-${c}.test.txt $OUTPUT_DIR/runs.fuse.interp.beir-v1.0.0-${c}.flat.bm25.bge-base-en-v1.5.bge-flat-onnx.topics.beir-v1.0.0-${c}.test.txt
 
     java -cp $ANSERINI_JAR trec_eval -c -m recall.100 qrels.beir-v1.0.0-${c}.test.txt $OUTPUT_DIR/runs.fuse.interp.beir-v1.0.0-${c}.flat.bm25.bge-base-en-v1.5.bge-flat-onnx.topics.beir-v1.0.0-${c}.test.txt
 
     java -cp $ANSERINI_JAR trec_eval -c -m recall.1000 qrels.beir-v1.0.0-${c}.test.txt $OUTPUT_DIR/runs.fuse.interp.beir-v1.0.0-${c}.flat.bm25.bge-base-en-v1.5.bge-flat-onnx.topics.beir-v1.0.0-${c}.test.txt
+
+    echo normalize
+    java -cp $ANSERINI_JAR trec_eval -c -m ndcg_cut.10 qrels.beir-v1.0.0-${c}.test.txt $OUTPUT_DIR/runs.fuse.norm.beir-v1.0.0-${c}.flat.bm25.bge-base-en-v1.5.bge-flat-onnx.topics.beir-v1.0.0-${c}.test.txt
+
+    java -cp $ANSERINI_JAR trec_eval -c -m recall.100 qrels.beir-v1.0.0-${c}.test.txt $OUTPUT_DIR/runs.fuse.norm.beir-v1.0.0-${c}.flat.bm25.bge-base-en-v1.5.bge-flat-onnx.topics.beir-v1.0.0-${c}.test.txt
+
+    java -cp $ANSERINI_JAR trec_eval -c -m recall.1000 qrels.beir-v1.0.0-${c}.test.txt $OUTPUT_DIR/runs.fuse.norm.beir-v1.0.0-${c}.flat.bm25.bge-base-en-v1.5.bge-flat-onnx.topics.beir-v1.0.0-${c}.test.txt
 done
 ```
